--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -64,6 +64,8 @@
 \usepackage{caption}
 \usepackage{algpseudocode}
 \usepackage{algorithm}
+\usepackage{breakurl}
+\usepackage{dsfont}
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
@@ -241,10 +243,9 @@
 \flushbottom
 \include{text/ch1-intro}
 \include{text/ch2-gb-method}
-\include{text/ch3-gb-result}
+\include{text/ch3-gb-result-new}
 \include{text/ch4-qd-method}
 \include{text/ch5-qd-result}
-\include{text/ch6-conclusion}
 
 
 %% APPENDICES %% 
