--- a/references.bib
+++ b/references.bib
@@ -65,16 +65,7 @@
   year={2009},
   publisher={Public Library of Science San Francisco, USA}
 }
-@article{bozarth2011coyote,
-  title={Coyote colonization of northern Virginia and admixture with Great Lakes wolves},
-  author={Bozarth, Christine A and Hailer, Frank and Rockwood, Larry L and Edwards, Cody W and Maldonado, Jes{\'u}s E},
-  journal={Journal of Mammalogy},
-  volume={92},
-  number={5},
-  pages={1070--1080},
-  year={2011},
-  publisher={American Society of Mammalogists 810 East 10th Street, PO Box 1897, Lawrence~…}
-}
+
 @article{hellenthal2014genetic,
   title={A genetic atlas of human admixture history},
   author={Hellenthal, Garrett and Busby, George BJ and Band, Gavin and Wilson, James F and Capelli, Cristian and Falush, Daniel and Myers, Simon},
@@ -600,16 +591,6 @@
   publisher={Elsevier}
 }
 
-@article{torkamani2018personal,
-  title={The personal and clinical utility of polygenic risk scores},
-  author={Torkamani, Ali and Wineinger, Nathan E and Topol, Eric J},
-  journal={Nature Reviews Genetics},
-  volume={19},
-  number={9},
-  pages={581--590},
-  year={2018},
-  publisher={Nature Publishing Group UK London}
-}
 @article{solovieff2013pleiotropy,
   title={Pleiotropy in complex traits: challenges and strategies},
   author={Solovieff, Nadia and Cotsapas, Chris and Lee, Phil H and Purcell, Shaun M and Smoller, Jordan W},
@@ -2574,4 +2555,547 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
 	year = {2024},
 	doi = {10.1101/2024.08.31.610262},
 	journal = {bioRxiv}
+}
+@article{lazaridis2024genetic,
+  title={The Genetic Origin of the Indo-Europeans},
+  author={Lazaridis, Iosif and Patterson, Nick and Anthony, David and Vyazov, Leonid and Fournier, Romain and Ringbauer, Harald and Olalde, I{\~n}igo and Khokhlov, Alexander A and Kitov, Egor P and Shishlina, Natalia I and others},
+  journal={bioRxiv},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Preprints}
+}
+@article{nielsen2024inference,
+  title={Inference and applications of ancestral recombination graphs},
+  author={Nielsen, Rasmus and Vaughn, Andrew H and Deng, Yun},
+  journal={Nature Reviews Genetics},
+  pages={1--12},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+@article{sankararaman2012date,
+  title={The date of interbreeding between Neandertals and modern humans},
+  author={Sankararaman, Sriram and Patterson, Nick and Li, Heng and P{\"a}{\"a}bo, Svante and Reich, David},
+  year={2012},
+  publisher={Public Library of Science San Francisco, USA}
+}
+@article{bergstrom2022grey,
+  title={Grey wolf genomic history reveals a dual ancestry of dogs},
+  author={Bergstr{\"o}m, Anders and Stanton, David WG and Taron, Ulrike H and Frantz, Laurent and Sinding, Mikkel-Holger S and Ersmark, Erik and Pfrengle, Saskia and Cassatt-Johnstone, Molly and Lebrasseur, Oph{\'e}lie and Girdland-Flink, Linus and others},
+  journal={Nature},
+  volume={607},
+  number={7918},
+  pages={313--320},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+@article{campbell2016pedigree,
+  title={A pedigree-based map of recombination in the domestic dog genome},
+  author={Campbell, Christopher L and Bh{\'e}rer, Claude and Morrow, Bernice E and Boyko, Adam R and Auton, Adam},
+  journal={G3: Genes, Genomes, Genetics},
+  volume={6},
+  number={11},
+  pages={3517--3524},
+  year={2016},
+  publisher={Oxford University Press}
+}
+@article{bozarth2011coyote,
+  title={Coyote colonization of northern Virginia and admixture with Great Lakes wolves},
+  author={Bozarth, Christine A and Hailer, Frank and Rockwood, Larry L and Edwards, Cody W and Maldonado, Jes{\'u}s E},
+  journal={Journal of Mammalogy},
+  volume={92},
+  number={5},
+  pages={1070--1080},
+  year={2011},
+  publisher={American Society of Mammalogists 810 East 10th Street, PO Box 1897, Lawrence~…}
+}
+@article{auton2013genetic,
+  title={Genetic recombination is targeted towards gene promoter regions in dogs},
+  author={Auton, Adam and Rui Li, Ying and Kidd, Jeffrey and Oliveira, Kyle and Nadel, Julie and Holloway, J Kim and Hayward, Jessica J and Cohen, Paula E and Greally, John M and Wang, Jun and others},
+  journal={PLoS genetics},
+  volume={9},
+  number={12},
+  pages={e1003984},
+  year={2013},
+  publisher={Public Library of Science San Francisco, USA}
+}
+@article{lehman1991introgression,
+  title={Introgression of coyote mitochondrial DNA into sympatric North American gray wolf populations},
+  author={Lehman, Niles and Eisenhawer, Andrew and Hansen, Kimberly and Mech, L David and Peterson, Rolf O and Gogan, Peter JP and Wayne, Robert K},
+  journal={Evolution},
+  volume={45},
+  number={1},
+  pages={104--119},
+  year={1991},
+  publisher={Wiley Online Library}
+}
+@article{vonholdt2016whole,
+  title={Whole-genome sequence analysis shows that two endemic species of North American wolf are admixtures of the coyote and gray wolf},
+  author={vonHoldt, Bridgett M and Cahill, James A and Fan, Zhenxin and Gronau, Ilan and Robinson, Jacqueline and Pollinger, John P and Shapiro, Beth and Wall, Jeff and Wayne, Robert K},
+  journal={Science Advances},
+  volume={2},
+  number={7},
+  pages={e1501714},
+  year={2016},
+  publisher={American Association for the Advancement of Science}
+}
+@article{murphy2022broad,
+  title={Broad-scale variation in human genetic diversity levels is predicted by purifying selection on coding and non-coding elements},
+  author={Murphy, David A and Elyashiv, Eyal and Amster, Guy and Sella, Guy},
+  journal={Elife},
+  volume={12},
+  pages={e76065},
+  year={2022},
+  publisher={eLife Sciences Publications Limited}
+}
+@article{leslie2015fine,
+  title={The fine-scale genetic structure of the British population},
+  author={Leslie, Stephen and Winney, Bruce and Hellenthal, Garrett and Davison, Dan and Boumertit, Abdelhamid and Day, Tammy and Hutnik, Katarzyna and Royrvik, Ellen C and Cunliffe, Barry and Wellcome Trust Case Control Consortium 2 and others},
+  journal={Nature},
+  volume={519},
+  number={7543},
+  pages={309--314},
+  year={2015},
+  publisher={Nature Publishing Group UK London}
+}
+@article{novembre2008genes,
+  title={Genes mirror geography within Europe},
+  author={Novembre, John and Johnson, Toby and Bryc, Katarzyna and Kutalik, Zolt{\'a}n and Boyko, Adam R and Auton, Adam and Indap, Amit and King, Karen S and Bergmann, Sven and Nelson, Matthew R and others},
+  journal={Nature},
+  volume={456},
+  number={7218},
+  pages={98--101},
+  year={2008},
+  publisher={Nature Publishing Group UK London}
+}
+@article{auton2015global,
+  title={A global reference for human genetic variation},
+  author={Auton, Adam and Abecasis, Gon{\c{c}}alo R and Altshuler, David M and Durbin, Richard M and Bentley, David R and Chakravarti, Aravinda and Clark, Andrew G and Donnelly, Peter and Eichler, Evan E and Flicek, Paul and others},
+  journal={Nature},
+  volume={526},
+  number={7571},
+  pages={68},
+  year={2015}
+}
+@article{stern2019approximate,
+  title={An approximate full-likelihood method for inferring selection and allele frequency trajectories from DNA sequence data},
+  author={Stern, Aaron J and Wilton, Peter R and Nielsen, Rasmus},
+  journal={PLoS Genetics},
+  volume={15},
+  number={9},
+  pages={e1008384},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+@article{vaughn2024fast,
+  title={Fast and accurate estimation of selection coefficients and allele histories from ancient and modern DNA},
+  author={Vaughn, Andrew H and Nielsen, Rasmus},
+  journal={Molecular Biology and Evolution},
+  volume={41},
+  number={8},
+  year={2024},
+  publisher={Oxford Academic}
+}
+@ARTICLE{noauthor_2016-cy,
+  title     = "Erratum for the Report ``Ancient Ethiopian genome reveals
+               extensive Eurasian admixture in Eastern Africa'' (previously
+               titled ``Ancient Ethiopian genome reveals extensive Eurasian
+               admixture throughout the African continent'') by M. Gallego
+               Llorente, E. R. Jones, A. Eriksson, V. Siska, K. W. Arthur, J.
+               W. Arthur, M. C. Curtis, J. T. Stock, M. Coltorti, P.
+               Pieruccini, S. Stretton, F. Brock, T. Higham, Y. Park, M.
+               Hofreiter, D. G. Bradley, J. Bhak, R. Pinhasi, A. Manica",
+  journal   = "Science",
+  publisher = "American Association for the Advancement of Science (AAAS)",
+  volume    =  351,
+  number    =  6275,
+  pages     = "aaf3945--aaf3945",
+  month     =  feb,
+  year      =  2016,
+  language  = "en"
+}
+
+@article{micheletti2020genetic,
+  title={Genetic consequences of the transatlantic slave trade in the Americas},
+  author={Micheletti, Steven J and Bryc, Kasia and Esselmann, Samantha G Ancona and Freyman, William A and Moreno, Meghan E and Poznik, G David and Shastri, Anjali J and Agee, M and Aslibekyan, S and Auton, A and others},
+  journal={The American Journal of Human Genetics},
+  volume={107},
+  number={2},
+  pages={265--277},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{pierron2017genomic,
+  title={Genomic landscape of human diversity across Madagascar},
+  author={Pierron, Denis and Heiske, Margit and Razafindrazaka, Harilanto and Rakoto, Ignace and Rabetokotany, Nelly and Ravololomanga, Bodo and Rakotozafy, Lucien M-A and Rakotomalala, Mireille Mialy and Razafiarivony, Michel and Rasoarifetra, Bako and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={32},
+  pages={E6498--E6506},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+@article{pierron2014genome,
+  title={Genome-wide evidence of Austronesian--Bantu admixture and cultural reversion in a hunter-gatherer group of Madagascar},
+  author={Pierron, Denis and Razafindrazaka, Harilanto and Pagani, Luca and Ricaut, Fran{\c{c}}ois-Xavier and Antao, Tiago and Capredon, M{\'e}lanie and Sambo, Cl{\'e}ment and Radimilahy, Chantal and Rakotoarisoa, Jean-Aim{\'e} and Blench, Roger M and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={111},
+  number={3},
+  pages={936--941},
+  year={2014},
+  publisher={National Acad Sciences}
+}
+@article{brielle2023entwined,
+  title={Entwined African and Asian genetic roots of medieval peoples of the Swahili coast},
+  author={Brielle, Esther S and Fleisher, Jeffrey and Wynne-Jones, Stephanie and Sirak, Kendra and Broomandkhoshbacht, Nasreen and Callan, Kim and Curtis, Elizabeth and Iliev, Lora and Lawson, Ann Marie and Oppenheimer, Jonas and others},
+  journal={Nature},
+  volume={615},
+  number={7954},
+  pages={866--873},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+@article{de2012bringing,
+  title={Bringing together linguistic and genetic evidence to test the Bantu expansion},
+  author={De Filippo, Cesare and Bostoen, Koen and Stoneking, Mark and Pakendorf, Brigitte},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={279},
+  number={1741},
+  pages={3256--3263},
+  year={2012},
+  publisher={The Royal Society}
+}
+@article{li2014genetic,
+  title={Genetic variation reveals large-scale population expansion and migration during the expansion of Bantu-speaking peoples},
+  author={Li, Sen and Schlebusch, Carina and Jakobsson, Mattias},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={281},
+  number={1793},
+  pages={20141448},
+  year={2014},
+  publisher={The Royal Society}
+}
+@article{patin2017dispersals,
+  title={Dispersals and genetic adaptation of Bantu-speaking populations in Africa and North America},
+  author={Patin, Etienne and Lopez, Marie and Grollemund, Rebecca and Verdu, Paul and Harmant, Christine and Quach, H{\'e}l{\`e}ne and Laval, Guillaume and Perry, George H and Barreiro, Luis B and Froment, Alain and others},
+  journal={Science},
+  volume={356},
+  number={6337},
+  pages={543--546},
+  year={2017},
+  publisher={American Association for the Advancement of Science}
+}
+@article{fortes2024genetic,
+  title={The genetic legacy of the expansion of Bantu-speaking peoples in Africa},
+  author={Fortes-Lima, Cesar A and Burgarella, Concetta and Hammar{\'e}n, Rickard and Eriksson, Anders and Vicente, M{\'a}rio and Jolly, Cecile and Semo, Armando and Gunnink, Hilde and Pacchiarotti, Sara and Mundeke, Leon and others},
+  journal={Nature},
+  volume={625},
+  number={7995},
+  pages={540--547},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+@article{amemiya2019encode,
+  title={The ENCODE blacklist: identification of problematic regions of the genome},
+  author={Amemiya, Haley M and Kundaje, Anshul and Boyle, Alan P},
+  journal={Scientific reports},
+  volume={9},
+  number={1},
+  pages={9354},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
+@article{myers2008common,
+  title={A common sequence motif associated with recombination hot spots and genome instability in humans},
+  author={Myers, Simon and Freeman, Colin and Auton, Adam and Donnelly, Peter and McVean, Gil},
+  journal={Nature genetics},
+  volume={40},
+  number={9},
+  pages={1124--1129},
+  year={2008},
+  publisher={Nature Publishing Group US New York}
+}
+@article{myers2010drive,
+  title={Drive against hotspot motifs in primates implicates the PRDM9 gene in meiotic recombination},
+  author={Myers, Simon and Bowden, Rory and Tumian, Afidalina and Bontrop, Ronald E and Freeman, Colin and MacFie, Tammie S and McVean, Gil and Donnelly, Peter},
+  journal={Science},
+  volume={327},
+  number={5967},
+  pages={876--879},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
+@article{coop2008high,
+  title={High-resolution mapping of crossovers reveals extensive variation in fine-scale recombination patterns among humans},
+  author={Coop, Graham and Wen, Xiaoquan and Ober, Carole and Pritchard, Jonathan K and Przeworski, Molly},
+  journal={science},
+  volume={319},
+  number={5868},
+  pages={1395--1398},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+@article{hinch2011landscape,
+  title={The landscape of recombination in African Americans},
+  author={Hinch, Anjali G and Tandon, Arti and Patterson, Nick and Song, Yunli and Rohland, Nadin and Palmer, Cameron D and Chen, Gary K and Wang, Kai and Buxbaum, Sarah G and Akylbekova, Ermeg L and others},
+  journal={Nature},
+  volume={476},
+  number={7359},
+  pages={170--175},
+  year={2011},
+  publisher={Nature Publishing Group UK London}
+}
+@article{alleva2021cataloging,
+  title={Cataloging human PRDM9 allelic variation using long-read sequencing reveals PRDM9 population specificity and two distinct groupings of related alleles},
+  author={Alleva, Benjamin and Brick, Kevin and Pratto, Florencia and Huang, Mini and Camerini-Otero, Rafael Daniel},
+  journal={Frontiers in cell and developmental biology},
+  volume={9},
+  pages={675286},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+@article{martin2019clinical,
+  title={Clinical use of current polygenic risk scores may exacerbate health disparities},
+  author={Martin, Alicia R and Kanai, Masahiro and Kamatani, Yoichiro and Okada, Yukinori and Neale, Benjamin M and Daly, Mark J},
+  journal={Nature genetics},
+  volume={51},
+  number={4},
+  pages={584--591},
+  year={2019},
+  publisher={Nature Publishing Group US New York}
+}
+@article{ding2023polygenic,
+  title={Polygenic scoring accuracy varies across the genetic ancestry continuum},
+  author={Ding, Yi and Hou, Kangcheng and Xu, Ziqi and Pimplaskar, Aditya and Petter, Ella and Boulier, Kristin and Priv{\'e}, Florian and Vilhj{\'a}lmsson, Bjarni J and Olde Loohuis, Loes M and Pasaniuc, Bogdan},
+  journal={Nature},
+  volume={618},
+  number={7966},
+  pages={774--781},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+@article{lewis2020polygenic,
+  title={Polygenic risk scores: from research tools to clinical instruments},
+  author={Lewis, Cathryn M and Vassos, Evangelos},
+  journal={Genome medicine},
+  volume={12},
+  number={1},
+  pages={44},
+  year={2020},
+  publisher={Springer}
+}
+@article{delaneau2019accurate,
+  title={Accurate, scalable and integrative haplotype estimation},
+  author={Delaneau, Olivier and Zagury, Jean-Fran{\c{c}}ois and Robinson, Matthew R and Marchini, Jonathan L and Dermitzakis, Emmanouil T},
+  journal={Nature communications},
+  volume={10},
+  number={1},
+  pages={5436},
+  year={2019},
+  publisher={Nature Publishing Group UK London}
+}
+@article{speidel2021inferring,
+  title={Inferring population histories for ancient genomes using genome-wide genealogies},
+  author={Speidel, Leo and Cassidy, Lara and Davies, Robert W and Hellenthal, Garrett and Skoglund, Pontus and Myers, Simon R},
+  journal={Molecular Biology and Evolution},
+  volume={38},
+  number={9},
+  pages={3497--3511},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+@article{sankararaman2016combined,
+  title={The combined landscape of Denisovan and Neanderthal ancestry in present-day humans},
+  author={Sankararaman, Sriram and Mallick, Swapan and Patterson, Nick and Reich, David},
+  journal={Current Biology},
+  volume={26},
+  number={9},
+  pages={1241--1247},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{rubinacci2021efficient,
+  title={Efficient phasing and imputation of low-coverage sequencing data using large reference panels},
+  author={Rubinacci, Simone and Ribeiro, Diogo M and Hofmeister, Robin J and Delaneau, Olivier},
+  journal={Nature Genetics},
+  volume={53},
+  number={1},
+  pages={120--126},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
+@article{sousa2023imputation,
+  title={Imputation of ancient human genomes},
+  author={Sousa da Mota, B{\'a}rbara and Rubinacci, Simone and Cruz D{\'a}valos, Diana Ivette and G. Amorim, Carlos Eduardo and Sikora, Martin and Johannsen, Niels N and Szmyt, Marzena H and W{\l}odarczak, Piotr and Szczepanek, Anita and Przyby{\l}a, Marcin M and others},
+  journal={Nature Communications},
+  volume={14},
+  number={1},
+  pages={3660},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+@article{skov2020nature,
+  title={The nature of Neanderthal introgression revealed by 27,566 Icelandic genomes},
+  author={Skov, Laurits and Coll Maci{\`a}, Mois{\`e}s and Sveinbj{\"o}rnsson, Gar{\dh}ar and Mafessoni, Fabrizio and Lucotte, Elise A and Einarsd{\'o}ttir, Margret S and Jonsson, Hakon and Halldorsson, Bjarni and Gudbjartsson, Daniel F and Helgason, Agnar and others},
+  journal={Nature},
+  volume={582},
+  number={7810},
+  pages={78--83},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+@article{prufer2014complete,
+  title={The complete genome sequence of a Neanderthal from the Altai Mountains},
+  author={Pr{\"u}fer, Kay and Racimo, Fernando and Patterson, Nick and Jay, Flora and Sankararaman, Sriram and Sawyer, Susanna and Heinze, Anja and Renaud, Gabriel and Sudmant, Peter H and De Filippo, Cesare and others},
+  journal={Nature},
+  volume={505},
+  number={7481},
+  pages={43--49},
+  year={2014},
+  publisher={Nature Publishing Group UK London}
+}
+@article{iasi2024neandertal,
+  title={Neandertal ancestry through time: Insights from genomes of ancient and present-day humans},
+  author={Iasi, Leonardo NM and Chintalapati, Manjusha and Skov, Laurits and Mesa, Alba Bossoms and Hajdinjak, Mateja and Peter, Benjamin M and Moorjani, Priya},
+  journal={bioRxiv},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Preprints}
+}
+@article{meyer2012high,
+  title={A high-coverage genome sequence from an archaic Denisovan individual},
+  author={Meyer, Matthias and Kircher, Martin and Gansauge, Marie-Theres and Li, Heng and Racimo, Fernando and Mallick, Swapan and Schraiber, Joshua G and Jay, Flora and Pr{\"u}fer, Kay and De Filippo, Cesare and others},
+  journal={Science},
+  volume={338},
+  number={6104},
+  pages={222--226},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+@article{torkamani2018personal,
+  title={The personal and clinical utility of polygenic risk scores},
+  author={Torkamani, Ali and Wineinger, Nathan E and Topol, Eric J},
+  journal={Nature Reviews Genetics},
+  volume={19},
+  number={9},
+  pages={581--590},
+  year={2018},
+  publisher={Nature Publishing Group UK London}
+}
+@article{hu2023leveraging,
+  title={Leveraging fine-scale population structure reveals conservation in genetic effect sizes between human populations across a range of human phenotypes},
+  author={Hu, Sile and Ferreira, Lino AF and Shi, Sinan and Hellenthal, Garrett and Marchini, Jonathan and Lawson, Daniel J and Myers, Simon R},
+  journal={bioRxiv},
+  pages={2023--08},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+@article{skoglund2017reconstructing,
+  title={Reconstructing prehistoric African population structure},
+  author={Skoglund, Pontus and Thompson, Jessica C and Prendergast, Mary E and Mittnik, Alissa and Sirak, Kendra and Hajdinjak, Mateja and Salie, Tasneem and Rohland, Nadin and Mallick, Swapan and Peltzer, Alexander and others},
+  journal={Cell},
+  volume={171},
+  number={1},
+  pages={59--71},
+  year={2017},
+  publisher={Elsevier}
+}
+@article{vuckovic2020polygenic,
+  title={The polygenic and monogenic basis of blood traits and diseases},
+  author={Vuckovic, Dragana and Bao, Erik L and Akbari, Parsa and Lareau, Caleb A and Mousas, Abdou and Jiang, Tao and Chen, Ming-Huei and Raffield, Laura M and Tardaguila, Manuel and Huffman, Jennifer E and others},
+  journal={Cell},
+  volume={182},
+  number={5},
+  pages={1214--1231},
+  year={2020},
+  publisher={Elsevier}
+}
+@article{rosenberg2002genetic,
+  title={Genetic structure of human populations},
+  author={Rosenberg, Noah A and Pritchard, Jonathan K and Weber, James L and Cann, Howard M and Kidd, Kenneth K and Zhivotovsky, Lev A and Feldman, Marcus W},
+  journal={science},
+  volume={298},
+  number={5602},
+  pages={2381--2385},
+  year={2002},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{schiffels2014inferring,
+  title={Inferring human population size and separation history from multiple genome sequences},
+  author={Schiffels, Stephan and Durbin, Richard},
+  journal={Nature genetics},
+  volume={46},
+  number={8},
+  pages={919--925},
+  year={2014},
+  publisher={Nature Publishing Group US New York}
+}
+@article{demenocal2011climate,
+  title={Climate and human evolution},
+  author={deMenocal, Peter B},
+  journal={science},
+  volume={331},
+  number={6017},
+  pages={540--542},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+@article{mcbrearty2000revolution,
+  title={The revolution that wasn't: a new interpretation of the origin of modern human behavior},
+  author={McBrearty, Sally and Brooks, Alison S},
+  journal={Journal of human evolution},
+  volume={39},
+  number={5},
+  pages={453--563},
+  year={2000},
+  publisher={Elsevier}
+}
+@article{bergstrom2021origins,
+  title={Origins of modern human ancestry},
+  author={Bergstr{\"o}m, Anders and Stringer, Chris and Hajdinjak, Mateja and Scerri, Eleanor ML and Skoglund, Pontus},
+  journal={Nature},
+  volume={590},
+  number={7845},
+  pages={229--237},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+@article{wegmann2011recombination,
+  title={Recombination rates in admixed individuals identified by ancestry-based inference},
+  author={Wegmann, Daniel and Kessner, Darren E and Veeramah, Krishna R and Mathias, Rasika A and Nicolae, Dan L and Yanek, Lisa R and Sun, Yan V and Torgerson, Dara G and Rafaels, Nicholas and Mosley, Thomas and others},
+  journal={Nature genetics},
+  volume={43},
+  number={9},
+  pages={847--853},
+  year={2011},
+  publisher={Nature Publishing Group US New York}
+}
+@article{baker2017repeated,
+  title={Repeated losses of PRDM9-directed recombination despite the conservation of PRDM9 across vertebrates},
+  author={Baker, Zachary and Schumer, Molly and Haba, Yuki and Bashkirova, Lisa and Holland, Chris and Rosenthal, Gil G and Przeworski, Molly},
+  journal={Elife},
+  volume={6},
+  pages={e24133},
+  year={2017},
+  publisher={eLife Sciences Publications, Ltd}
+}
+@article{fenner2005cross,
+  title={Cross-cultural estimation of the human generation interval for use in genetics-based population divergence studies},
+  author={Fenner, Jack N},
+  journal={American Journal of Physical Anthropology: The Official Publication of the American Association of Physical Anthropologists},
+  volume={128},
+  number={2},
+  pages={415--423},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+@article{wang2023human,
+  title={Human generation times across the past 250,000 years},
+  author={Wang, Richard J and Al-Saffar, Samer I and Rogers, Jeffrey and Hahn, Matthew W},
+  journal={Science Advances},
+  volume={9},
+  number={1},
+  pages={eabm7047},
+  year={2023},
+  publisher={American Association for the Advancement of Science}
 }
