--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -2,20 +2,48 @@
 % Second parameter is the max length of bold terms.
 \begin{mclistof}{List of Abbreviations}{3.2cm}
 
-\item[1-D, 2-D] One- or two-dimensional, referring in this thesis to spatial dimensions in an image.
+\item[AF] Allele frequency
 
-\item[Otter] One of the finest of water mammals.
+\item[ARG] Ancestral recombination graph
 
-\item[Hedgehog] Quite a nice prickly friend.
+\item[GRM] Genomic relationship matrix
 
-PCA
-RHE
-HLA =  human leukocyte antigen
-MAF
-LD
-LOCO
-PGS
-HMM
-ICR
+\item[GWAS] Genome-wide association study
 
+\item[HLA] Human leukocyte antigen
+
+\item[HMM] Hidden Markov model
+
+\item[HRC+UK10k] Haplotype reference panel consortium + UK10k
+
+\item[IBD] Identity by descent
+
+\item[ICR] Inverse coalescence rates
+
+\item[LMM] Linear mixed model
+
+\item[LD] Linkage disequilibrium
+
+\item[LOCO] Leave-one-chromosome-out
+
+\item[MAF] Minor allele frequency
+
+\item[PCA] Principal component analysis
+
+\item[PCs] Principal components
+
+\item[PGS] Polygenic score
+
+\item[RHE] Randomized Haseman-Elston
+
+\item[SNP] Single nucleotide polymorphism
+
+\item[SGDP] Simons genome diversity project
+
+\item[UKB] UK biobank
+
+\item[WGS] Whole genome sequencing
+
+\item[$1{,}000$GP] $1{,}000$ genomes project
+ 
 \end{mclistof} 
