--- a/text/abstract.tex
+++ b/text/abstract.tex
@@ -1,1 +1,16 @@
-Your abstract text goes here.  Check your departmental regulations, but generally this should be less than 300 words.  
+% The genetic makeup of present-day humans reflects the profound influence of past demographic changes, including migrations and interactions among diverse populations. Traditional methods for studying these events often struggle to detect subtle genetic traces of such historical processes. To overcome these challenges, we developed GhostBuster, a method that leverages genome-wide genealogies to provide clearer and more accurate insights into human history. Using GhostBuster to examine African population history, we identified two significant events. First, a Holocene-era back-to-Africa migration which introduced detectable levels of Eurasian ancestry in several African populations. Second, an ancient admixture event involving two population groups, one of which shares a close relationship with the ancestors of modern humans who eventually migrated out of Africa. These findings were validated through analyses of mutational patterns and affinities with archaic and ancient populations. Our results showcase the power of genome-wide genealogical approaches in unraveling intricate demographic histories and illuminating humanity's shared past.
+
+The past decade has revealed numerous admixture events involving populations well-characterized by modern and ancient genomic data. However, current methods often struggle to detect events involving unknown populations, populations with poorly defined genomic composition, or those leaving only subtle traces in our genomes. To overcome these challenges, we introduce GhostBuster, a novel method that leverages genome-wide genealogies to robustly identify such hidden events. We validate GhostBuster against state-of-the-art approaches, demonstrating its accuracy in detecting known admixture events, and apply it to investigate African population history. Our analysis uncovers two key findings: first, a Holocene-era back-to-Africa migration introducing detectable levels of Eurasian and Neanderthal ancestry across Africa; and second, an ancient admixture event with a population closely related to the ancestors of non-African modern humans. These findings are further supported by mutational signatures and affinities with archaic populations. Our results highlight the power of genome-wide genealogical approaches in illuminating humanity's shared past.
+
+The rapid growth of modern biobanks is creating new opportunities for large-scale genome-wide association studies (GWAS) and the analysis of complex traits.
+%
+However, performing GWAS on millions of samples often leads to trade-offs between computational efficiency and statistical power, reducing the benefits of large-scale data collection efforts.
+%
+We developed Quickdraws, a method that increases association power in quantitative and binary traits without sacrificing computational efficiency, leveraging a spike-and-slab prior on variant effects, stochastic variational inference and GPU acceleration.
+%
+We applied Quickdraws to $79$ quantitative and $50$ binary traits in $405{,}000$ UK Biobank samples, identifying $4.97\%$ and $3.25\%$ more associations than REGENIE, and $22.71\%$ and $7.07\%$ more than FastGWA.
+%
+Quickdraws had costs comparable to REGENIE, FastGWA, and SAIGE on the UK Biobank RAP service, while being substantially faster than BOLT-LMM.
+%
+These results highlight the promise of leveraging machine learning techniques for scalable GWAS without sacrificing power or robustness.
+%
