--- a/text/acknowledgements.tex
+++ b/text/acknowledgements.tex
@@ -1,18 +1,16 @@
 \subsection*{Personal}
 
-% This is where you thank your advisor, colleagues, and family and friends.
-% Advisors: Pier Palamara, Simon Myers
-% Co-authors: Georgios, Leo, Fergus
-% Family: Ma, Pa, Bro
+First and foremost, I would like to express my heartfelt gratitude to my supervisors, Professor Simon Myers and Professor Pier Palamara, for their invaluable guidance, patience, and unwavering support throughout my DPhil journey. Their enthusiasm for science and problem-solving has been both infectious and inspiring, profoundly shaping this work and my growth as a researcher. I am also deeply thankful to my co-authors and collaborators — Leo Speidel, Georgios Kalantzis, and Fergus Cooper — for generously sharing their expertise and insights, which were instrumental in bringing this thesis to fruition.
 
+I would like to express my heartfelt gratitude to my family - my dad, my mom, and my brother - for their unwavering support and belief in me throughout this journey. My parents have made countless sacrifices and difficult decisions, always prioritizing my future and well-being over their own. Their selflessness and love have been a constant source of strength and motivation, and I know that no words can ever fully capture the depth of my gratitude. I am profoundly blessed to have them in my life. My brother, Gaurish, has always been a source of care and positivity, offering his unwavering support through challenging times and I am deeply thankful for his presence in my life. I am also incredibly grateful to Pita, who has been my rock and a constant source of strength over the past six years. She has shared in my joys and triumphs, and has stood by me through the inevitable challenges and setbacks. Her unwavering support, patience, and love have been invaluable, and her presence in my life is something I cherish beyond words.
+
+My experience at Oxford would be incomplete without the incredible friends I made along the way. I am deeply grateful to my housemates — Aston, Javier, Jiarui, Justin, Kristine, Marcel, Rahul, Robbie, Sophie, and Xinran (alphabetically ordered) — whose company made every shared meal, walk, restaurant outing, road trip, and, most importantly, the endless banter in the house unforgettable. Whether it was mocking each other or being there for one another, you all made this journey brighter. I would also like to thank my office and climbing friends — Jiazheng, Lino, Marius, Miriam, Riddhi, Romain, Sinan, and Zoi (alphabetically ordered) — for making my time in the office more enjoyable and eventful. The outdoor climbing trips and sessions at Brookes are unforgettable highlights of my Oxford experience, and they will always hold a special place in my memories.
 
 \subsection*{Institutional}
 
-% Wellcome trust, clarendon
+I would like to extend my sincere gratitude to the Clarendon Fund at the University of Oxford, Balliol College at the University of Oxford, the Medical Sciences Doctoral Training Centre (MSDTC) studentship, and the Wellcome Trust studentship for their generous financial support throughout my DPhil.
 
 \subsection*{Previously published material}
-I am deeply grateful for the opportunity to work with talented and dedicated collaborators on several projects throughout the course of my DPhil. Some of the work presented in this thesis was developed with input from these collaborators and has resulted in peer-reviewed publications and preprints. As scientific ideas and outputs are often generated collaboratively, I use the pronouns "we" throughout this thesis.
+I am deeply grateful for the opportunity to collaborate with talented and dedicated colleagues throughout my DPhil journey. Their invaluable input has shaped much of the work in this thesis, contributing to peer-reviewed publications. Since scientific ideas and outputs are often developed collaboratively, I use ``we'' throughout this thesis to reflect the collective nature of these efforts. Where data processing, quality control, or scripts were adapted from others, I have acknowledged their contributions. Unless otherwise stated, all the work presented here, including the code, analyses, figures, and tables, is my own.
 
-In the thesis, any data processing or quality control steps performed by others, or cases where I modified scripts originally created by others, are acknowledged accordingly. The work presented, including all code and analyses used to generate text, figures, and tables, is entirely my own, except where explicitly noted.
-
-Chapters 4 and 5 are adapted from sections of my first-authored preprint, "A scalable variational inference approach for increased mixed-model association power" which is currently under review at Nature Genetics. I have obtained written permission from the editors of the respective journals to reproduce published figures, in part or in full, within my thesis.
+Chapters 4 and 5 are adapted from my first-authored paper, ``A Scalable Variational Inference Approach for Increased Mixed-Model Association Power,'' published in Nature Genetics. I have obtained written permission from my supervisor, Prof. Pier Palamara, to include the content of this paper in my thesis.
